--- a/ore.css
+++ b/ore.css
@@ -97,7 +97,7 @@ html{
 /* ----------home------------ */
 
 .bg-area{
-  background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(/Moving-Head-Lights.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(./Moving-Head-Lights.jpg);
   width: 100%;
   height: 100vh;
   background-size: cover;
